--- a/slider.html
+++ b/slider.html
@@ -21,6 +21,10 @@
 					</div>
 				</div>
 			</div>
+			<div class="bouton">
+				<button id="bplay">Play</button>
+				<button id="bstop">stop</button>
+			</div>
 		</div>
 		
 		<script type="text/javascript" src="jquery.js" ></script>
